--- a/index.html
+++ b/index.html
@@ -7,20 +7,46 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+    <!-- Background decorations -->
+    <div class="bg-decoration">
+        <span class="star">✨</span>
+        <span class="star">⭐</span>
+        <span class="star">✨</span>
+        <span class="star">⭐</span>
+        <span class="star">✨</span>
+    </div>
+
+    <!-- Floating ribbons -->
+    <div class="ribbon ribbon-1">🎀</div>
+    <div class="ribbon ribbon-2">🎀</div>
+
     <!-- Loading animation -->
     <div class="loading">
-        <div class="loading-spinner">❤</div>
+        <div class="loading-spinner">🎀</div>
     </div>
 
     <header>
         <div class="blob"></div>
         <div class="blob"></div>
+        <div class="floating-hearts">
+            <span class="heart-float">💕</span>
+            <span class="heart-float">💗</span>
+            <span class="heart-float">💖</span>
+            <span class="heart-float">💗</span>
+            <span class="heart-float">💕</span>
+            <span class="heart-float">💖</span>
+        </div>
+        <span class="bow">🎀</span>
         <h1>小乖</h1>
         <p>一只可爱的非洲迷你小刺猬</p>
     </header>
 
     <main>
         <section class="about-section fade-in">
+            <span class="pearl"></span>
+            <span class="pearl"></span>
+            <span class="pearl"></span>
+            <span class="pearl"></span>
             <h2>关于小乖</h2>
             <p>小乖是一只4个月大的非洲迷你母刺猬，她性格温顺可爱，非常亲人。最大的爱好就是吃猫粮，小小的身子却有着大大的胃口呢！</p>
             <div class="stats">
