--- a/index.html
+++ b/index.html
@@ -42,8 +42,13 @@
             <span class="heart-float">💖</span>
         </div>
         <span class="bow">🎀</span>
-        <h1>小乖</h1>
-        <p>一只可爱的非洲迷你小刺猬</p>
+        <h1 class="title-bounce">小乖</h1>
+        <p class="cute-paragraph text-glow">
+    <span class="emoji-decoration">🐾</span>
+    <span class="cute-highlight">一只可爱的</span>
+    <span class="rainbow-text">非洲迷你小刺猬</span>
+    <span class="emoji-decoration">🐾</span>
+</p>
     </header>
 
     <!-- BGM Audio -->
@@ -58,26 +63,26 @@
             <span class="pearl"></span>
             <span class="pearl"></span>
             <span class="pearl"></span>
-            <h2>关于小乖</h2>
-            <p>小乖是一只4个月大的非洲迷你母刺猬，她性格温顺可爱，非常亲人。最大的爱好就是吃猫粮，小小的身子却有着大大的胃口呢！</p>
+            <h2 class="title-sparkle decorate-underline">关于小乖</h2>
+            <p class="cute-paragraph text-glow highlight-cute">小乖是一只<span class="number-bounce">4</span>个月大的非洲迷你母刺猬，她性格温顺可爱，非常亲人。最大的爱好就是吃猫粮，小小的身子却有着大大的胃口呢！</p>
             <div class="stats">
                 <div class="stat-item">
-                    <div class="stat-number">4</div>
+                    <div class="stat-number number-bounce">4</div>
                     <div class="stat-label">个月大</div>
                 </div>
                 <div class="stat-item">
-                    <div class="stat-number">6</div>
+                    <div class="stat-number number-bounce">6</div>
                     <div class="stat-label">张美照</div>
                 </div>
                 <div class="stat-item">
-                    <div class="stat-number">∞</div>
+                    <div class="stat-number rainbow-text">∞</div>
                     <div class="stat-label">可爱程度</div>
                 </div>
             </div>
         </section>
 
         <section class="gallery-section fade-in">
-            <h2>小乖的日常</h2>
+            <h2 class="title-sparkle decorate-underline">小乖的日常</h2>
             <div class="gallery">
                 <div class="gallery-item" data-index="0" data-name="麻将桌上的小乖">
                     <img src="images/麻将桌上的小乖.png" alt="麻将桌上的小乖">
@@ -87,7 +92,7 @@
                     <span class="sparkle"></span>
                     <span class="sparkle"></span>
                     <div class="gallery-overlay">
-                        <h3>麻将桌上的小乖</h3>
+                        <h3 class="bling-text">麻将桌上的小乖</h3>
                         <p>在麻将桌上玩耍的小乖</p>
                     </div>
                     <button class="feed-btn" title="喂小乖">🍖 喂小乖</button>
@@ -100,7 +105,7 @@
                     <span class="sparkle"></span>
                     <span class="sparkle"></span>
                     <div class="gallery-overlay">
-                        <h3>托着小乖</h3>
+                        <h3 class="bling-text">托着小乖</h3>
                         <p>托着毛茸茸的小乖</p>
                     </div>
                     <button class="feed-btn" title="喂小乖">🍖 喂小乖</button>
@@ -113,7 +118,7 @@
                     <span class="sparkle"></span>
                     <span class="sparkle"></span>
                     <div class="gallery-overlay">
-                        <h3>怀里面可爱的小乖</h3>
+                        <h3 class="bling-text">怀里面可爱的小乖</h3>
                         <p>乖乖躺在怀里的小乖</p>
                     </div>
                     <button class="feed-btn" title="喂小乖">🍖 喂小乖</button>
@@ -126,7 +131,7 @@
                     <span class="sparkle"></span>
                     <span class="sparkle"></span>
                     <div class="gallery-overlay">
-                        <h3>肥肥的小乖看着我</h3>
+                        <h3 class="bling-text">肥肥的小乖看着我</h3>
                         <p>肥嘟嘟的小乖深情地看着你</p>
                     </div>
                     <button class="feed-btn" title="喂小乖">🍖 喂小乖</button>
@@ -139,7 +144,7 @@
                     <span class="sparkle"></span>
                     <span class="sparkle"></span>
                     <div class="gallery-overlay">
-                        <h3>手拽着小乖</h3>
+                        <h3 class="bling-text">手拽着小乖</h3>
                         <p>小小的手拽着小小的她</p>
                     </div>
                     <button class="feed-btn" title="喂小乖">🍖 喂小乖</button>
@@ -152,7 +157,7 @@
                     <span class="sparkle"></span>
                     <span class="sparkle"></span>
                     <div class="gallery-overlay">
-                        <h3>在喝水的小乖</h3>
+                        <h3 class="bling-text">在喝水的小乖</h3>
                         <p>认真喝水的小乖</p>
                     </div>
                     <button class="feed-btn" title="喂小乖">🍖 喂小乖</button>
@@ -171,7 +176,7 @@
     <div class="feed-reaction" id="feedReaction"></div>
 
     <footer>
-        <p>Made with <span class="heart">❤</span> for 小乖</p>
+        <p class="cute-text">Made with <span class="heart">❤</span> for 小乖</p>
     </footer>
 
     <!-- Lightbox -->
