--- a/index.html
+++ b/index.html
@@ -255,6 +255,188 @@
                 <p>💝 <strong>小乖是我最珍贵的宝贝，我会一直一直爱你~</strong> 💝</p>
             </div>
         </section>
+
+        <!-- Together Days Counter -->
+        <section class="together-days fade-in">
+            <h3>✨ 小乖陪伴我的每一天 ✨</h3>
+            <div class="days-counter">
+                <span class="days-number" id="togetherDays">0</span>
+                <span class="days-label">天</span>
+            </div>
+            <p class="days-subtitle">从2025年10月10日开始，我们在一起的每一天 💕</p>
+
+            <!-- Together Memories Grid -->
+            <div class="memories-grid">
+                <div class="memory-card">
+                    <span class="memory-icon">🍖</span>
+                    <span class="memory-count" id="feedCount">0</span>
+                    <span class="memory-label">次猫粮</span>
+                </div>
+                <div class="memory-card">
+                    <span class="memory-icon">💤</span>
+                    <span class="memory-count">--</span>
+                    <span class="memory-label">次抱抱</span>
+                </div>
+                <div class="memory-card">
+                    <span class="memory-icon">👀</span>
+                    <span class="memory-count">∞</span>
+                    <span class="memory-label">次对视</span>
+                </div>
+                <div class="memory-card">
+                    <span class="memory-icon">💕</span>
+                    <span class="memory-count">∞</span>
+                    <span class="memory-label">次心动</span>
+                </div>
+            </div>
+        </section>
+
+        <!-- Daily Routine Section -->
+        <section class="daily-section fade-in">
+            <h3>小乖的一天 🌙</h3>
+            <div class="daily-timeline">
+                <div class="daily-item">
+                    <span class="daily-time">08:00</span>
+                    <span class="daily-marker">😴</span>
+                    <div class="daily-content">
+                        <h4>睡觉觉</h4>
+                        <p>白天当然是睡觉啦！卷成小球球躲在小窝里~</p>
+                    </div>
+                </div>
+                <div class="daily-item">
+                    <span class="daily-time">12:00</span>
+                    <span class="daily-marker">😴</span>
+                    <div class="daily-content">
+                        <h4>继续睡</h4>
+                        <p>睡眼惺忪，偶尔翻个身继续睡~</p>
+                    </div>
+                </div>
+                <div class="daily-item">
+                    <span class="daily-time">18:00</span>
+                    <span class="daily-marker">💤</span>
+                    <div class="daily-content">
+                        <h4>起床啦</h4>
+                        <p>天黑啦！小乖起床咯，伸个懒腰准备嗨~</p>
+                    </div>
+                </div>
+                <div class="daily-item">
+                    <span class="daily-time">19:00</span>
+                    <span class="daily-marker">🍽️</span>
+                    <div class="daily-content">
+                        <h4>晚餐时间</h4>
+                        <p>听到猫粮声音超激动！吧嗒吧嗒狂吃~</p>
+                    </div>
+                </div>
+                <div class="daily-item">
+                    <span class="daily-time">21:00</span>
+                    <span class="daily-marker">🏃</span>
+                    <div class="daily-content">
+                        <h4>跑轮时间</h4>
+                        <p>在跑轮上疯狂跑步，锻炼身体~</p>
+                    </div>
+                </div>
+                <div class="daily-item">
+                    <span class="daily-time">23:00</span>
+                    <span class="daily-marker">👀</span>
+                    <div class="daily-content">
+                        <h4>探索时间</h4>
+                        <p>在新家到处探索，对一切都好好奇~</p>
+                    </div>
+                </div>
+                <div class="daily-item">
+                    <span class="daily-time">02:00</span>
+                    <span class="daily-marker">🌙</span>
+                    <div class="daily-content">
+                        <h4>夜宵时间</h4>
+                        <p>再吃一点，补充能量继续玩~</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- Growth Comparison Section -->
+        <section class="growth-section fade-in">
+            <h3>成长对比 🌟</h3>
+            <div class="growth-cards">
+                <div class="growth-card">
+                    <span class="growth-emoji">🥚</span>
+                    <h4>刚来时 · 10月</h4>
+                    <div class="size">鸡蛋大小</div>
+                    <p>脏兮兮的小不点，只有一点点大，蜷缩在手心里还会发抖...</p>
+                </div>
+                <div class="growth-arrow">➜</div>
+                <div class="growth-card">
+                    <span class="growth-emoji">🦔</span>
+                    <h4>现在 · 2月</h4>
+                    <div class="size">圆滚滚</div>
+                    <p>长成了毛茸茸的小胖墩！肚子圆圆滚滚，手感超级好~</p>
+                </div>
+            </div>
+        </section>
+
+        <!-- Wish List Section -->
+        <section class="wish-section fade-in">
+            <h3>愿望清单 🎈</h3>
+            <p class="wish-subtitle">想和小乖一起做的事情 💭</p>
+            <div class="wish-grid">
+                <div class="wish-card" data-wish="park">
+                    <span class="wish-check"></span>
+                    <span class="wish-icon">🌳</span>
+                    <h4>去公园玩</h4>
+                    <p>带小乖去草地上探索~</p>
+                </div>
+                <div class="wish-card" data-wish="photo">
+                    <span class="wish-check"></span>
+                    <span class="wish-icon">📸</span>
+                    <h4>拍写真</h4>
+                    <p>留下最美的纪念~</p>
+                </div>
+                <div class="wish-card" data-wish="friend">
+                    <span class="wish-check"></span>
+                    <span class="wish-icon">👫</span>
+                    <h4>见小伙伴</h4>
+                    <p>认识更多刺猬朋友~</p>
+                </div>
+                <div class="wish-card" data-wish="travel">
+                    <span class="wish-check"></span>
+                    <span class="wish-icon">🏠</span>
+                    <h4>一起去旅行</h4>
+                    <p>带小乖看更大的世界~</p>
+                </div>
+                <div class="wish-card" data-wish="cute">
+                    <span class="wish-check"></span>
+                    <span class="wish-icon">🎀</span>
+                    <h4>戴蝴蝶结</h4>
+                    <p>打扮得漂漂亮亮~</p>
+                </div>
+                <div class="wish-card" data-wish="treat">
+                    <span class="wish-check"></span>
+                    <span class="wish-icon">🎂</span>
+                    <h4>过生日</h4>
+                    <p>准备小乖的生日派对~</p>
+                </div>
+            </div>
+        </section>
+
+        <!-- Final Message -->
+        <section class="final-message fade-in">
+            <div class="final-content">
+                <div class="final-emoji">🦔💕🌙</div>
+                <h2 class="final-title">小乖，我爱你 💗</h2>
+                <p class="final-text">
+                    谢谢你选择了我，成为我的小宝贝<br>
+                    每一个有你陪伴的日子，都是最幸福的时光<br>
+                    未来的每一天，我都会一直一直爱你~<br><br>
+                    <strong>—— 永远爱你的主人</strong> 💖
+                </p>
+                <div class="final-hearts">
+                    <span>💕</span>
+                    <span>💗</span>
+                    <span>💖</span>
+                    <span>💗</span>
+                    <span>💕</span>
+                </div>
+            </div>
+        </section>
     </main>
 
     <!-- Feed Counter -->
